[package]
name = "tty_doc"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = "0.24"
egui = "0.24"
syntect = "5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.35", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1